--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -1,29 +1,22 @@
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.mygrid{
-    /*подключаем сетку*/
+main {
     display: grid;
     grid-template-columns: 241px 241px 241px;
     grid-template-rows: 90px 241px 241px 155px 155px 241px 241px 155px 155px 90px;
-    /* расстояние между строками*/
     row-gap: 10px;
-    /* расстояние между колонками*/
     column-gap: 20px;
+    justify-content: center;
 }
 img {
     grid-row-start: 7;
     grid-row-end: 8;
     grid-column-start: 1;
     grid-column-end: 2;
-    position: relative;
-    left: 5px;
     width: 241px;
     height: 241px;
+    margin-left: 5px;
+    margin-right: -5px;
 }
-.oblast_head {
+header {
     grid-row-start: 1;
     grid-row-end: 2;
     grid-column-start: 1;
@@ -32,7 +25,7 @@ img {
     grid-template-columns: 100vh;
     align-content: center;
 }
-.oblast_footer {
+footer {
     grid-row-start: 10;
     grid-row-end: 11;
     grid-column-start: 1;
@@ -48,8 +41,9 @@ img {
     grid-column-end: 3;
     background-color: #A2A9B7;
     grid-template-columns: 100vh;
-    position: relative;
-    left: 5px;
+    font-size: 18.11px;
+    margin-left: 5px;
+    margin-right: -5px;
 }
 .cube2 {
     grid-row-start: 2;
@@ -58,8 +52,8 @@ img {
     grid-column-end: 4;
     background-color: #A2A9B7;
     grid-template-columns: 100vh;
-    position: relative;
-    right: 5px;
+    margin-left: -5px;
+    margin-right: 5px;
 }
 .cube3 {
     grid-row-start: 3;
@@ -68,8 +62,8 @@ img {
     grid-column-end: 4;
     background-color: #A2A9B7;
     grid-template-columns: 100vh;
-    position: relative;
-    right: 5px;
+    margin-left: -5px;
+    margin-right: 5px;
 }
 .cube4 {
     grid-row-start: 4;
@@ -78,9 +72,8 @@ img {
     grid-column-end: 2;
     background-color: #E8EBED;
     grid-template-columns: 100vh;
-    position: relative;
-    left: 5px;
-    font-size: 24px;
+    margin-left: 5px;
+    margin-right: -5px;
 }
 .cube5 {
     grid-row-start: 4;
@@ -89,10 +82,8 @@ img {
     grid-column-end: 3;
     background-color: #E8EBED;
     grid-template-columns: 100vh;
-    position: relative;
-    right: 5px;
     width: 251px;
-    font-size: 24px;
+    margin-left: -5px;
 }
 .cube6 {
     grid-row-start: 4;
@@ -101,9 +92,8 @@ img {
     grid-column-end: 4;
     background-color: #90BCE8;
     grid-template-columns: 100vh;
-    position: relative;
-    right: 5px;
-    font-size: 24px;
+    margin-left: -5px;
+    margin-right: 5px;
 }
 .cube7 {
     grid-row-start: 5;
@@ -112,9 +102,8 @@ img {
     grid-column-end: 3;
     background-color: #E8EBED;
     grid-template-columns: 100vh;
-    position: relative;
-    left: 5px;
-    font-size: 24px;
+    margin-left: 5px;
+    margin-right: -5px;
 }
 .cube8 {
     grid-row-start: 5;
@@ -123,9 +112,8 @@ img {
     grid-column-end: 4;
     background-color: #FEBF26;
     grid-template-columns: 100vh;
-    position: relative;
-    right: 5px;
-    font-size: 24px;
+    margin-left: -5px;
+    margin-right: 5px;
 }
 .cube9 {
     grid-row-start: 6;
@@ -134,9 +122,8 @@ img {
     grid-column-end: 2;
     background-color: #E3EBD3;
     grid-template-columns: 100vh;
-    position: relative;
-    left: 5px;
-    font-size: 24px;
+    margin-left: 5px;
+    margin-right: -5px;
 }
 .cube10 {
     grid-row-start: 6;
@@ -145,10 +132,8 @@ img {
     grid-column-end: 4;
     background-color: #E3EBD3;
     grid-template-columns: 100vh;
-    position: relative;
-    right: 5px;
-    /*align-content: center;*/
-    font-size: 24px;
+    margin-left: -5px;
+    margin-right: 5px;
 }
 .cube11 {
     grid-row-start: 8;
@@ -157,9 +142,8 @@ img {
     grid-column-end: 2;
     background-color: #FFAA87;
     grid-template-columns: 100vh;
-    position: relative;
-    left: 5px;
-    font-size: 24px;
+    margin-left: 5px;
+    margin-right: -5px;
 }
 .cube12 {
     grid-row-start: 8;
@@ -168,9 +152,8 @@ img {
     grid-column-end: 4;
     background-color: #FFAA87;
     grid-template-columns: 100vh;
-    position: relative;
-    right: 5px;
-    font-size: 24px;
+    margin-left: -5px;
+    margin-right: 5px;
 }
 .cube13 {
     grid-row-start: 9;
@@ -179,9 +162,8 @@ img {
     grid-column-end: 2;
     background-color: #F55E62;
     grid-template-columns: 100vh;
-    position: relative;
-    left: 5px;
-    font-size: 24px;
+    margin-left: 5px;
+    margin-right: -5px;
 }
 .cube14 {
     grid-row-start: 9;
@@ -190,10 +172,8 @@ img {
     grid-column-end: 3;
     background-color: #FFAA87;
     grid-template-columns: 100vh;
-    position: relative;
-    right: 5px;
     width: 251px;
-    font-size: 24px;
+    margin-left: -5px;
 }
 .cube15 {
     grid-row-start: 9;
@@ -202,7 +182,6 @@ img {
     grid-column-end: 4;
     background-color: #C7ABD4;
     grid-template-columns: 100vh;
-    position: relative;
-    right: 5px;
-    font-size: 24px;
+    margin-left: -5px;
+    margin-right: 5px;
 }
