--- a/Styles/fonts.css
+++ b/Styles/fonts.css
@@ -12,77 +12,41 @@ body {
 }
 .ot_pr {
     text-align: right;
-    font-size: 14px;
     line-height: 19.07px;
     margin: 20px 2px 0 2px;
 }
 .ot_lt {
     text-align: left;
-    font-size: 14px;
     line-height: 19.07px;
     margin: 20px 0 0 0;
 }
-.DR {
-    margin: 20px 0 0 0;
-}
-.PH {
+.DRPH {
     margin: 20px 0 0 0;
 }
 header {
     font-size: 24px;
     text-align: center;
-    line-height: 20px;
 }
 footer {
     font-size: 24px;
     text-align: center;
-    line-height: 20px;
+}
+.text {
+    margin: 0;
+}
+.text_w {
+    color: white;
 }
 .text1 {
-    color: white;
     text-align: center;
     line-height: 26.16px;
-    margin: 0;
 }
 .text2 {
-    color: white;
-    font-size: 14px;
-    line-height: 20px;
-    margin: 0;
-}
-.text3 {
-    font-size: 14px;
-    line-height: 20px;
-    margin: 0;
-}
-.text4 {
-    font-size: 14px;
-    line-height: 20px;
-    margin: 0;
-}
-.text5 {
-    font-size: 14px;
-    line-height: 20px;
-    margin: 0;
-}
-.text6 {
     position: relative;
-    color: white;
-    font-size: 14px;
-    line-height: 20px;
-    margin: 0;
-    left: 10px;
-    top: 221px;
 }
 .img_text {
     grid-row-start: 7;
     grid-row-end: 8;
     grid-column-start: 1;
     grid-column-end: 2;
-<<<<<<< HEAD:Styles/Fonts.css
-    line-height: 20px;
 }
-=======
-    line-height: 1.25em;
-}
->>>>>>> e51d1e99d46602fffd4d28613bb9bc411b856266:Styles/fonts.css
